fized bug in authentication